# BUFF_DEC

./: CMakeLists.txt  main.cpp  readme.md  svm_trained.xml  train  train_svm.cpp
Li_shouran_work/task/: CMakeCache.txt  CMakeLists.txt  Makefile  buff  cmake_install.cmake  main.cpp  report.txt
include/: buff.hpp
src/: buff.cpp  test
src/save/: buf_save.cpp
svm_model/: svm_trained_old_00.xml  svm_trained_old_01.xml  svm_trained_old_02.xml  svm_trained_old_03.xml
test/: buff.cpp  buff.hpp  main.cpp  test
